--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Casemath1</title>
+  <title>CaseMath</title>
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/lumen/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   <style>
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Casemath1</a>
+        <a href="/" class="navbar-brand">CaseMath</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,10 +42,14 @@
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
-        </ul>
+        <ul class="nav navbar-nav navbar-right"><%  if current_user != nil %>
+          <li><a href="/users/edit"><%= current_user.username %></a></li>
+          <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
+          <li><a href="/users/<%= current_user.id %>">My page</a></li>
+          <% else %>
+          <li><a href="/users/sign_up"> Sign Up</a></li>
+          <li><a href="/users/sign_in"> Sign In</a></li>
+          <% end %>
       </div><!-- /.navbar-collapse -->
     </div>
   </nav>
