--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,9 @@
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right"><%  if current_user != nil %>
-          <li><a href="/users/edit"><%= current_user.username %></a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
-          <li><a href="/users/<%= current_user.id %>">My page</a></li>
-          <% else %>
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="/users/sign_up"> Sign Up</a></li>
           <li><a href="/users/sign_in"> Sign In</a></li>
-          <% end %>
       </div><!-- /.navbar-collapse -->
     </div>
   </nav>
