app dev submission upload

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,6 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/lessons">Lessons</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -50,6 +49,17 @@
   </nav>
 
 
-  <h3> Hey, world </h3>
+  <div class="container">
+    <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2>Welcome!</h2>
+      </div>
+    <div class="panel-body">
+      <div class="form-group">
+        <h4><p>Click the sign-up link to get started, and then browse the <a href="/lessons">lessons</a>.</p></h4>
+      </div></div></div>
+
+
+</div>
 </body>
 </html>
